<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <androidx.core.widget.NestedScrollView
            android:id="@+id/svContent"
            android:clipToPadding="false"
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <global.msnthrp.langen.ui.view.language.AlphabetView
                    android:id="@+id/alphabetView"
                    android:layout_width="match_parent"
                    app:editMode="true"
                    app:spanCount="7"
                    android:layout_height="wrap_content"/>

            <global.msnthrp.langen.ui.view.HintView
                    android:id="@+id/hvAlphabet"
                    android:elevation="8dp"
                    android:layout_margin="16dp"
                    android:layout_alignBottom="@+id/alphabetView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swLongWords"
                    android:layout_marginTop="8dp"
                    app:thumbTint="@color/switch_thumb"
                    app:trackTint="@color/switchTrack"
                    android:textColor="@color/textMain"
                    android:layout_below="@+id/alphabetView"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:text="@string/long_words"
                    android:layout_height="?actionBarSize"/>

            <TextView
                    android:text="@string/language_name"
                    android:id="@+id/tvNameLabel"
                    android:layout_below="@+id/swLongWords"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/textOther"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/tvName"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/textMain"
                    android:layout_below="@+id/tvNameLabel"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    tools:text="jfsihev"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/tvSampleLabel"
                    android:text="@string/text_sample"
                    android:layout_below="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/textOther"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/tvSample"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/textMain"
                    android:layout_below="@+id/tvSampleLabel"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    tools:text="jfsi  shds aoidho ado hdohev"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/btnCreateAgain"
                    android:layout_marginTop="24dp"
                    android:text="@string/create_again"
                    android:layout_below="@+id/tvSample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <global.msnthrp.langen.ui.view.HintView
                    android:id="@+id/hvCreateAgain"
                    android:layout_margin="16dp"
                    android:elevation="8dp"
                    android:layout_alignBottom="@+id/btnCreateAgain"
                    android:layout_toStartOf="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            <Button
                    android:id="@+id/btnSave"
                    android:text="@string/save"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="24dp"
                    android:layout_below="@+id/tvSample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>